force-app/main/default/objects/Opportunity/fields/GBV_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>GBV_Marketplace__c</fullName>
    <label>GBV - Marketplace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>