force-app/main/default/objects/Opportunity/fields/Invoice_Paid_Last_12m__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Last_12m__c</fullName>
    <description>Total invoice paid amount over last 12 months - Bokun Revenue at Risk</description>
    <inlineHelpText>Total invoice paid amount over last 12 months - Bokun Revenue at Risk</inlineHelpText>
    <label>Invoice Paid Last 12m</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>