force-app/main/default/objects/Opportunity/fields/Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value__c</fullName>
    <description>Projected Invoice Amount minus Actual Invoice Paid last 12 months</description>
    <formula>Projected_Invoices_12m__c -  Invoice_Paid_Last_12m__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected Invoice Amount minus Actual Invoice Paid last 12 months</inlineHelpText>
    <label>Opportunity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>