force-app/main/default/objects/Opportunity/fields/Projected_Invoices_12m__c.field-meta.xml
<CustomField>
    <fullName>Projected_Invoices_12m__c</fullName>
    <description>Projected invoiced amount over 12 months if the opportunity is adopted</description>
    <inlineHelpText>Projected invoiced amount over 12 months if the opportunity is adopted</inlineHelpText>
    <label>Projected Invoices 12m</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>